--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -1,218 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
-        <link href="https://fonts.gstatic.com" rel="preconnect">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Shrikhand&display=swap"
-              rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="assets/css/style.css" rel="stylesheet"/>
-        <link href="assets/css/media.css" media="screen and (max-width : 1024px)" rel="stylesheet"/>
 
-        <!--    Meta title-->
-        <title>La note enchanté restaurant | Ohmyfood</title>
-        <meta name="title" content="La note enchanté restaurant | Ohmyfood">
-        <meta name="description" content="Découvrez La note enchanté, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient"/>
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/media.css" media="screen and (max-width : 1024px)" rel="stylesheet" />
 
-        <!--    Og Graph-->
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://www.ohmyfood.com/la_note_enchante">
-        <meta property="og:site_name" content="Ohmyfood"/>
-        <meta property="og:title" content="La note enchanté restaurant | Ohmyfood">
-        <meta property="og:description" content="Découvrez La note enchanté, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient"/>
-        <meta property="og:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+    <!--    Meta title-->
+    <title>La note enchanté restaurant | Ohmyfood</title>
+    <meta name="title" content="La note enchanté restaurant | Ohmyfood">
+    <meta name="description"
+        content="Découvrez La note enchanté, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient" />
 
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://www.ohmyfood.com/la_note_enchante">
-        <meta property="twitter:title" content="La note enchanté restaurant | Ohmyfood">
-        <meta property="twitter:description" content="Découvrez La note enchanté, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient">
-        <meta property="twitter:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+    <!--    Og Graph-->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ohmyfood.com/la_note_enchante">
+    <meta property="og:site_name" content="Ohmyfood" />
+    <meta property="og:title" content="La note enchanté restaurant | Ohmyfood">
+    <meta property="og:description"
+        content="Découvrez La note enchanté, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient" />
+    <meta property="og:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
 
-    </head>
-    <body class="menu">
-        <!--Header-->
-        <header>
-            <a href="index.html" class="back-btn">
-                <i class="fas fa-arrow-left"></i>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.ohmyfood.com/la_note_enchante">
+    <meta property="twitter:title" content="La note enchanté restaurant | Ohmyfood">
+    <meta property="twitter:description"
+        content="Découvrez La note enchanté, restaurant d'exception, séléctionnés par nos soins et réservez le menu qui vous convient">
+    <meta property="twitter:image" content="https://www.ohmyfood.com/assets/images/logo/ohmyfood.png">
+
+</head>
+
+<body class="menu">
+    <!--Header-->
+    <header>
+        <a href="index.html" class="back-btn">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <div class="logo">
+            <img alt="logo" src="assets/images/logo/ohmyfood.png" />
+        </div>
+        <figure class="cover-img">
+            <img alt="La note enchanté restaurant" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+        </figure>
+    </header>
+
+    <main class="bg-grey">
+        <div class="restaurant-title">
+            <h1 class="shrikhand">La note enchantée</h1>
+            <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+            </div>
+        </div>
+
+        <section class="full-width cards">
+            <h2 class="sub-title">ENTRÉES</h2>
+            <article class="card card-menu fade-1">
+                <hgroup>
+                    <h3 class="menu-title">Ravioles de foie gras</h3>
+                    <h4>Accompagnés de leur crème à la truffe</h4>
+                </hgroup>
+                <div class="price">
+                    <span>25€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+
+            </article>
+            <article class="card card-menu fade-2">
+                <hgroup>
+                    <h3 class="menu-title">Caviar osciétre</h3>
+                    <h4>Sur blini à la farine de blé noir</h4>
+                </hgroup>
+                <div class="price">
+                    <span>35€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="card card-menu fade-3">
+                <hgroup>
+                    <h3 class="menu-title">Homard et espuma de...</h3>
+                    <h4>Mariné aux zests d'orange</h4>
+                </hgroup>
+                <div class="price">
+                    <span>25€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+
+            </article>
+            <article class="card card-menu fade-4">
+                <hgroup>
+                    <h3 class="menu-title">Foie gras de canard cuit entier</h3>
+                    <h4>Confiture de figue et pain toasté</h4>
+                </hgroup>
+                <div class="price">
+                    <span>35€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+
+            </article>
+        </section>
+
+
+        <section class="full-width cards">
+            <h2 class="sub-title">PLATS</h2>
+            <article class="card card-menu fade-5">
+                <hgroup>
+                    <h3 class="menu-title">Noix de coquilles Saint-Jacques</h3>
+                    <h4>Sur son lit de purée de céleri-rave</h4>
+                </hgroup>
+                <div class="price">
+                    <span>40€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="card card-menu fade-6">
+                <hgroup>
+                    <h3 class="menu-title">Langoustine poêlée</h3>
+                    <h4>Purée de patate douce</h4>
+                </hgroup>
+                <div class="price">
+                    <span>35€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="card card-menu fade-7">
+                <hgroup>
+                    <h3 class="menu-title">Mijoté de queue de boeuf</h3>
+                    <h4>Et riz sauvage aux zests de citron</h4>
+                </hgroup>
+                <div class="price">
+                    <span>44€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+        </section>
+
+        <section class="full-width cards">
+            <h2 class="sub-title">DESSERT</h2>
+            <article class="card card-menu fade-8">
+                <hgroup>
+                    <h3 class="menu-title">Macaron noisette et chocolat</h3>
+                    <h4>Glace au caramel brun et sel de Guérande</h4>
+                </hgroup>
+                <div class="price">
+                    <span>18€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="card card-menu fade-9">
+                <hgroup>
+                    <h3 class="menu-title">Baba au rhum revisité</h3>
+                    <h4>Avec son coulis de citron</h4>
+                </hgroup>
+                <div class="price">
+                    <span>22€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+            <article class="card card-menu fade-10">
+                <hgroup>
+                    <h3 class="menu-title">Tarte au citron meringuée</h3>
+                    <h4>Destructurée</h4>
+                </hgroup>
+                <div class="price">
+                    <span>23€</span>
+                </div>
+                <div class="caption-check-box">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+            </article>
+        </section>
+
+        <aside class="full-width order fade-11">
+            <a class="show-btn button1" href="#">
+                Commander
             </a>
+        </aside>
+    </main>
+    <footer>
+        <div id="f-container" class="fade-12 container">
             <div class="logo">
-                <img alt="logo" src="assets/images/logo/ohmyfood.png"/>
+                <img alt="footer logo" src="assets/images/logo/ohmyfood.png">
             </div>
-            <figure class="cover-img">
-                <img alt="La note enchanté restaurant" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
-            </figure>
-        </header>
-
-        <main class="bg-grey">
-            <div class="restaurant-title">
-                <h1 class="shrikhand">La note enchantée</h1>
-                <div class="like">
-                    <i class="far fa-heart default-icon"></i>
-                    <i class="fas fa-heart hover-icon"></i>
-                </div>
+            <div class="col-3">
+                <ul class="one footer-icon">
+                    <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                </ul>
+                <ul class="one">
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </div>
+        </div>
+    </footer>
+</body>
 
-            <section class="full-width cards">
-                <h2 class="sub-title">ENTRÉES</h2>
-                <article class="card fade-1">
-                    <hgroup>
-                        <h3 class="menu-title">Ravioles de foie gras</h3>
-                        <h4>Accompagnés de leur crème à la truffe</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>25€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-
-                </article>
-                <article class="card fade-2">
-                    <hgroup>
-                        <h3 class="menu-title">Caviar osciétre</h3>
-                        <h4>Sur blini à la farine de blé noir</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>35€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-                <article class="card fade-3">
-                    <hgroup>
-                        <h3 class="menu-title">Homard et espuma de...</h3>
-                        <h4>Mariné aux zests d'orange</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>25€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-
-                </article>
-                <article class="card fade-4">
-                    <hgroup>
-                        <h3 class="menu-title">Foie gras de canard cuit entier</h3>
-                        <h4>Confiture de figue et pain toasté</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>35€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-
-                </article>
-            </section>
-
-
-            <section class="full-width cards">
-                <h2 class="sub-title">PLATS</h2>
-                <article class="card fade-5">
-                    <hgroup>
-                        <h3 class="menu-title">Noix de coquilles Saint-Jacques</h3>
-                        <h4>Sur son lit de purée de céleri-rave</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>40€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-                <article class="card fade-6">
-                    <hgroup>
-                        <h3 class="menu-title">Langoustine poêlée</h3>
-                        <h4>Purée de patate douce</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>35€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-                <article class="card fade-7">
-                    <hgroup>
-                        <h3 class="menu-title">Mijoté de queue de boeuf</h3>
-                        <h4>Et riz sauvage aux zests de citron</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>44€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-            </section>
-
-            <section class="full-width cards">
-                <h2 class="sub-title">DESSERT</h2>
-                <article class="card fade-8">
-                    <hgroup>
-                        <h3 class="menu-title">Macaron noisette et chocolat</h3>
-                        <h4>Glace au caramel brun et sel de Guérande</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>18€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-                <article class="card fade-9">
-                    <hgroup>
-                        <h3 class="menu-title">Baba au rhum revisité</h3>
-                        <h4>Avec son coulis de citron</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>22€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-                <article class="card fade-10">
-                    <hgroup>
-                        <h3 class="menu-title">Tarte au citron meringuée</h3>
-                        <h4>Destructurée</h4>
-                    </hgroup>
-                    <div class="price">
-                        <span>23€</span>
-                    </div>
-                    <div class="caption-check-box">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </article>
-            </section>
-
-            <aside class="full-width order fade-11">
-                <a class="show-btn button1" href="#">
-                    Commander
-                </a>
-            </aside>
-        </main>
-        <footer>
-            <div id="f-container" class="fade-12">
-                <div class="logo">
-                    <img alt="footer logo" src="assets/images/logo/ohmyfood.png">
-                </div>
-                <div class="col-3">
-                    <ul class="one footer-icon">
-                        <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-                        <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-                    </ul>
-                    <ul class="one">
-                        <li><a href="#">Mentions légales</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
-    </body>
 </html>
